[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["memory-management", "development-tools::profiling"]
description = "A shuffling allocator, randomizing heap object locations; useful for avoiding accidental cache locality during benchmarking, which can obscure performance evaluation."
documentation = "https://docs.rs/shuffling-allocator"
edition = "2018"
license = "MPL-2.0"
name = "shuffling-allocator"
readme = "./README.md"
repository = "https://github.com/fitzgen/shuffling-allocator"
version = "1.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
libc = "0.2.79"
